Bug 249061. GTK2 needs to prioritize paints over PLEvents. r+sr=blizzard